--- a/css/estilo.css
+++ b/css/estilo.css
@@ -39,6 +39,71 @@
 .imgServiciosIz{grid-area: imgServiciosIz;}
 .listaServiciosDer{grid-area: listaServiciosDer;}
 
+/*grid interno en servicios*/
+
+
+.gridInternoServicio{
+    display: grid;
+    grid-template-areas: 
+    "primerServicio segundoServicio tercerServicio cuartoServicio";
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: auto ;
+}
+
+.primerServicio{grid-area: primerServicio;  ; margin: 5px; border-style: dashed; padding: 10px;}
+.segundoServicio{grid-area: segundoServicio;margin: 5px; border-style: dashed; padding: 10px;}
+.tercerServicio{grid-area: tercerServicio;margin: 5px; border-style: dashed; padding: 10px;}
+.cuartoServicio{grid-area: cuartoServicio;margin: 5px; border-style: dashed; padding: 10px;}
+
+/*centrando imagenes dentro de grid interno*/
+
+.centerImgServicio{
+    display: flex;
+    justify-content: center;
+}
+
+/*letra de titulos dentro de grid interno*/
+
+h5{
+    font-size: 20px;
+}
+
+/*grid en nosotros*/
+
+.gridNosotros{
+    display: grid;
+    grid-template-areas: "personaUno personaDos";
+    grid-template-columns: 50% 50%;
+    grid-template-rows: auto;
+}
+.personaUno{grid-area: personaUno; margin: 5px; padding: 10px; background-color: pink;}
+.personaDos{grid-area: personaDos; margin: 5px; padding: 10px; background-color: pink;}
+
+.negro{
+    color: black;
+}
+
+/*segundo grid en nosotros*/
+
+.gridMisionV{
+    display: grid;
+    grid-template-areas: "misionYv imagenMV"
+    ;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: auto ;
+}
+.misionYv{grid-area: misionYv;margin: 99px; background-color: blueviolet; padding: 25px; border: 2px;margin: 152px;}
+
+.imagenMV{grid-area: imagenMV;display: flex;justify-content: center; padding: 20px;}
+
+
+
+
+
+
+
+
+
 /*contacto main grids */
 
 .gridContacto{
@@ -54,15 +119,121 @@
 .tituloContacto{grid-area: tituloContacto;}
 .parrafoContactoCentro{grid-area: parrafoContactoCentro;}
 .imgConctactoIzq{grid-area: imgContactoIzq;}
-.parrafoContactoIzq{grid-area: parrafoContactoIzq;}
-.formNye{grid-area: formNye;}
+.parrafoContactoIzq{grid-area: parrafoContactoIzq; padding: 15px;margin: 15px; border: 10px;}
+.formNye{grid-area: formNye; margin: 20px}
 .formComentario{grid-area: formComentario;}
+
+
+
+
+     /*contacto boton formulario*/
+
+.btn{
+    border-radius: 3px;
+    display: inline-block;
+    padding: 20px 15px;
+    text-shadow: 0 1px 0 rgba(255,255,255,0.3);
+    box-shadow: 0 1px 1px rgba(0,0,0,0.3);
+}
+
+.btn-blue{
+    color: white;
+    background-color: #2600ff;
+}
+.btn-blue:hover{
+    background-color: #37b839;
+}
+.btn-blue:active{
+    background-color: #29962a;
+}
+form{
+    width: 300px;
+    background-color: white;
+    border-radius: 3px;
+    margin: 0 auto;
+    padding: 15px;
+    color: #999;
+    font-size: 12px;
+
+}
+input, textarea{
+    width: 280px
+}
+textarea{
+    padding: 10px
+}
+
+label{
+    color: violet;
+    font-size: 15px;
+}
+
+.field{
+    border: solid 2px #ccc;
+    padding: 10px;
+    width: 280px;
+}
+.field:focus{
+    border-color: black;
+
+}
+
+/*CARDS EN PRODUCTOS **/
+
+.container{
+    width:100% ;
+    display: flex;
+    max-width: 1302px;
+    
+
+}
+.cards{
+    width: 100%;
+    margin: 20px;
+    border-radius: 6px;
+    overflow: hidden;
+    background-color: white;
+    box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
+    transition: all 400ms ease ;
+
+}
+.cards:hover{
+    box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
+    transform: translateY(-3%);
+}
+
+.cards .contenido{
+    padding: 15px;
+    text-align: center;
+}
+.cards .contenido p{
+    line-height: 1.5;
+    color: #6a6a6a;
+}
+.cards .contenido h3{
+    font-weight: 400;
+    margin-bottom: 15px;
+}
+.cards .contenido a{
+    text-decoration: none;
+    display: inline-block;
+    padding: 10px;
+    margin-top: 10px;
+    color: #2fb4cc;
+    border: 1px solid #2fb4cc ;
+    border-radius: 4px;
+    transition: all 400ms ease;
+}
+.cards .contenido a:hover{
+    background: #2fb4cc ;
+    color: white;
+}
 
 /*margenes y padding */ 
                 /*contacto*/
-.imgContactoIzq{margin-left: 30px;}
-.marginform {margin-left: 28px;
-margin-top: 20px;}
+.imgContactoIzq{margin-left: 115px;}
+.marginform {margin-left: 177px;
+margin-top: 46px; margin-bottom: 100px;}
 .marginformC{margin-bottom: 20px; margin-left: 15px;}
 .paddingC {padding-left: 15px;  }
 
@@ -257,26 +428,46 @@ span{
     
 @media only screen and (max-width: 768px){
 
+    header {
+        background-image: linear-gradient(60deg,black,violet,blue);  /*color fondo */
+       display: flex;
+       height: 171px;
+    }
+    
         /*tamaño letra menu header*/
    
     ul li a {
         font-size: 15px;
+        padding: 5px;
+
+    }
+
+   
+    
+    
+
+    .horizontal{
+        display: flex;
+        flex-direction: column;
+        
+        
     }
          /*grid index*/
     .gridIndex{
         display: grid;
         grid-template-areas: 
         
-        "tituloPrincipal tituloPrincipal"
-        "primerParrafo primerParrafo"
-        "imgIzq parrafoDerecha"
-        "segundoParrafo segundoParrafo"
-        "imgDer imgDer"
-        "parrafoIzq parrafoIzq"
+        "tituloPrincipal"
+        "primerParrafo"
+        "imgIzq"
+        "parrafoDerecha"
+        "segundoParrafo"
+        "imgDer"
+        "parrafoIzq"
         
      ;
-     grid-template-columns: 50% 50%;
-     grid-template-rows: auto auto auto auto auto auto ;
+     grid-template-columns: 100%;
+     grid-template-rows: auto auto auto auto auto auto auto ;
     }
     .tituloPrincipal{grid-area: tituloPrincipal;}
     .primerParrafo{grid-area: primerParrafo;}
@@ -285,6 +476,7 @@ span{
     .segundoParrafo{grid-area: segundoParrafo;}
     .parrafoIzq{grid-area: parrafoIzq;}
     .imgDer{grid-area: imgDer;}
+
        /*grid servicios*/
 
     .gridServicios{
@@ -303,27 +495,52 @@ span{
     .imgServiciosIz{grid-area: imgServiciosIz;}
     .listaServiciosDer{grid-area: listaServiciosDer;}
 
+
+    /*servicios */
+
+  .centerImgServicio{display: none;}
+
         /*grid contacto*/
 
         .gridContacto{
             display: grid;
             grid-template-areas:
-            "tituloContacto tituloContacto"
-            "parrafoContactoCentro parrafoContactoCentro"
-            "imgContactoIzq parrafoContactoIzq"
-            "formNye formNye"
-            "formComentario formComentario";
-            grid-template-columns: 50% 50%;
-            grid-template-rows: auto auto auto auto auto ;
+            "tituloContacto"
+            "parrafoContactoCentro" 
+            "imgContactoIzq"
+            "parrafoContactoIzq"
+            "formNye"
+            "formComentario";
+            grid-template-columns:100%;
+            grid-template-rows: auto auto auto auto auto auto ;
         }
         .tituloContacto{grid-area: tituloContacto;}
         .parrafoContactoCentro{grid-area: parrafoContactoCentro;}
         .imgConctactoIzq{grid-area: imgContactoIzq;}
         .parrafoContactoIzq{grid-area: parrafoContactoIzq;}
-        .formNye{grid-area: formNye;}
+        .formNye{grid-area: formNye; }
         .formComentario{grid-area: formComentario;}
-             
+
+        .marginform{
+            margin-left: 56px;
+            margin-bottom: 25px;
+            
+        }
 
 
+        /*nosotros*/
+
+        .gridMisionV{
+            display: grid;
+            grid-template-areas: "misionYv"
+            "imagenMV" 
+            ;
+            grid-template-columns:  100%;
+            grid-template-rows: auto auto ;
+        }
         
+            /*productos*/
+        .container{
+            flex-wrap: wrap;
+        } 
 }
